<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/aicte_approved_institutes_for_the_academic_year_2021_2021"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#191970"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/year_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/year"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/year_title"
        android:layout_marginLeft="25dp"

       />

    <TextView
        android:id="@+id/level_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/select_level"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_below="@+id/spinner_year"/>

    <Spinner
        android:id="@+id/spinner_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/level_title"
        android:layout_marginLeft="25dp"
        />

    <TextView
        android:id="@+id/state_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_level"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="State"
        android:textAllCaps="false"
        android:textSize="20sp" />


    <Spinner
        android:id="@+id/spinner_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/state_title"
        android:layout_marginLeft="25dp"
        />

    <TextView
        android:id="@+id/program_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/select_program"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_below="@+id/spinner_state"/>

    <Spinner
        android:id="@+id/spinner_program"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/program_title"
        android:layout_marginLeft="25dp"
        />

    <TextView
        android:id="@+id/type_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_program"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/institution_type"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/type_title"
        android:layout_marginLeft="25dp"
        />

    <Button
        android:id="@+id/clg_search_btn"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/clg_stat"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="17dp"
        android:text="@string/search"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/clg_stat"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/clg_unapproved"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="17dp"
        android:text="@string/see_statistics"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/clg_unapproved"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="1dp"
        android:text="Unapproved"
        android:textAllCaps="false" />


</RelativeLayout>