<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserResetPasswordActivity">

    <RelativeLayout
        android:id="@+id/relative123"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/page_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/reset_password"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <EditText
        android:id="@+id/find_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative123"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/inputs_design"
        android:hint="Please write your phone number..."
        android:padding="14dp" />

    <TextView
        android:id="@+id/title_questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/find_phone_number"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="Answer the following Security Question..."
        android:textSize="26sp" />

    <EditText
        android:id="@+id/question_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_questions"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/inputs_design"
        android:hint="@string/what_is_your_pet_s_name"
        android:padding="14dp" />

    <EditText
        android:id="@+id/question_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question_1"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/inputs_design"
        android:hint="@string/what_is_your_favourite_place"
        android:padding="14dp" />

    <Button
        android:id="@+id/verify_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question_2"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:padding="14dp"
        android:text="Verify"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>